--- a/AI_Project2.ipynb
+++ b/AI_Project2.ipynb
@@ -6882,7 +6882,7 @@
         "\n",
         "---\n",
         "\n",
-        "The purpose of this project is the implementation of a Movie Recommendation System based on movies' characteristics and movie reviews. The Project is in Greek. The movies_metadata.csv, train_raitings.csv, test_raitings.csv datasets that we were provided with by our instructors at ECE NTUA are also attached. The movies_metadata.csv contains movie characteristics such as name, genre, director, actors, keywords etc, provided by IMDB. The raiting csvs contain real user movie reviews that are split in train and test datasets. Queries are written in Prolog.\n",
+        "The purpose of this project is the implementation of a Movie Recommendation System based on movies' characteristics and movie reviews. The Project is in Greek. We were provided with the datasets \"movies_metadata.csv\", \"train_raitings.csv\" and \"test_raitings.csv\" by our instructors at ECE NTUA. The movies_metadata.csv contains movie characteristics such as name, genre, director, actors, keywords etc, provided by IMDB. The raiting csvs contain real user movie reviews that are split in train and test datasets. Queries are written in Prolog.\n",
         "\n",
         "Quick Summary in English\n",
         "---\n",
